; ModuleID = '/home/carl/AnghaBench/libuv/test/extr_test-signal.c_start_timer.c'
source_filename = "/home/carl/AnghaBench/libuv/test/extr_test-signal.c_start_timer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timer_ctx = type { i32, i32, i64 }

@timer_cb = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, %struct.timer_ctx*)* @start_timer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @start_timer(i32* %0, i32 %1, %struct.timer_ctx* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.timer_ctx*, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.timer_ctx* %2, %struct.timer_ctx** %6, align 8
  %7 = load %struct.timer_ctx*, %struct.timer_ctx** %6, align 8
  %8 = getelementptr inbounds %struct.timer_ctx, %struct.timer_ctx* %7, i32 0, i32 2
  store i64 0, i64* %8, align 8
  %9 = load i32, i32* %5, align 4
  %10 = load %struct.timer_ctx*, %struct.timer_ctx** %6, align 8
  %11 = getelementptr inbounds %struct.timer_ctx, %struct.timer_ctx* %10, i32 0, i32 0
  store i32 %9, i32* %11, align 8
  %12 = load i32*, i32** %4, align 8
  %13 = load %struct.timer_ctx*, %struct.timer_ctx** %6, align 8
  %14 = getelementptr inbounds %struct.timer_ctx, %struct.timer_ctx* %13, i32 0, i32 1
  %15 = call i64 @uv_timer_init(i32* %12, i32* %14)
  %16 = icmp eq i64 0, %15
  %17 = zext i1 %16 to i32
  %18 = call i32 @ASSERT(i32 %17)
  %19 = load %struct.timer_ctx*, %struct.timer_ctx** %6, align 8
  %20 = getelementptr inbounds %struct.timer_ctx, %struct.timer_ctx* %19, i32 0, i32 1
  %21 = load i32, i32* @timer_cb, align 4
  %22 = call i64 @uv_timer_start(i32* %20, i32 %21, i32 5, i32 5)
  %23 = icmp eq i64 0, %22
  %24 = zext i1 %23 to i32
  %25 = call i32 @ASSERT(i32 %24)
  ret void
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i64 @uv_timer_init(i32*, i32*) #1

declare dso_local i64 @uv_timer_start(i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
